# digits_recognizer

./: .gitignore  CMakeLists.txt  CMakeSettings.json
app/: CMakeLists.txt
app/include/: main.hpp  neural_network.hpp
app/src/: main.cpp
include/: neural_network.hpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
